# HockeySDK-Mac

./: .gitignore  CMakeLists.txt
3.2.1/: .gitignore  CMakeLists.txt  README.md
3.2.1/Classes/BetaDistribution/: BITSystemProfile.m
3.2.1/Classes/CrashReporting/: BITCrashCXXExceptionHandler.mm  BITCrashManager.m
3.2.1/Classes/Feedback/: BITFeedbackManager.m
3.2.1/Classes/Helper/: BITKeychainItem.m
3.2.1/Support/HockeySDK.xcodeproj/: project.pbxproj
3.2.1/Support/HockeySDK.xcodeproj/project.xcworkspace/xcshareddata/: HockeySDK.xcscmblueprint
3.2.1/Support/HockeySDK.xcodeproj/xcshareddata/xcschemes/: HockeySDK Distribution.xcscheme  HockeySDK Documentation.xcscheme  HockeySDK.xcscheme
Binaries/3.2.1/de.bitstadium.HockeySDK-Mac-3.2.1.docset/Contents/: Info.plist
Binaries/3.2.1/de.bitstadium.HockeySDK-Mac-3.2.1.docset/Contents/Resources/: Nodes.xml  Tokens1.xml  Tokens10.xml  Tokens11.xml  Tokens12.xml  Tokens13.xml  Tokens14.xml  Tokens15.xml  Tokens16.xml  Tokens17.xml  Tokens18.xml  Tokens19.xml  Tokens20.xml  Tokens21.xml  Tokens22.xml  Tokens23.xml  Tokens24.xml  Tokens25.xml  Tokens26.xml  Tokens27.xml  Tokens3.xml  Tokens8.xml  Tokens9.xml  docSet.dsidx  docSet.dsidx-shm  docSet.dsidx-wal  docSet.skidx  docSet.toc  docSet.tokencache
Binaries/3.2.1/de.bitstadium.HockeySDK-Mac-3.2.1.docset/Contents/Resources/Documents/: hierarchy.html  index.html
Binaries/3.2.1/de.bitstadium.HockeySDK-Mac-3.2.1.docset/Contents/Resources/Documents/Blocks/: BITCustomCrashReportUIHandler.html  BITNetworkCompletionBlock.html
Binaries/3.2.1/de.bitstadium.HockeySDK-Mac-3.2.1.docset/Contents/Resources/Documents/Classes/: BITCrashDetails.html  BITCrashExceptionApplication.html  BITCrashManager.html  BITCrashMetaData.html  BITFeedbackManager.html  BITFeedbackMessage.html  BITFeedbackMessageAttachment.html  BITHockeyAppClient.html  BITHockeyAttachment.html  BITHockeyBaseManager.html  BITHockeyManager.html  BITSystemProfile.html
Binaries/3.2.1/de.bitstadium.HockeySDK-Mac-3.2.1.docset/Contents/Resources/Documents/Constants/: BITCrashErrorReason.html  BITCrashManagerUserInput.html  BITFeedbackErrorReason.html  BITFeedbackMessageStatus.html  BITFeedbackUserDataElement.html  BITHockeyErrorReason.html
Binaries/3.2.1/de.bitstadium.HockeySDK-Mac-3.2.1.docset/Contents/Resources/Documents/Protocols/: BITCrashManagerDelegate.html  BITHockeyManagerDelegate.html
Binaries/3.2.1/de.bitstadium.HockeySDK-Mac-3.2.1.docset/Contents/Resources/Documents/docs/docs/: Changelog.html  Guide-Installation-Mac-App.html  Guide-Installation-Setup.html  Guide-Migration.html  HowTo-App-Versioning.html  HowTo-Upload-Symbols.html  Troubleshooting-Crash-Reporting-Not-Working.html
